@@ -1,3 +1,7 @@
+2006-08-03  Chong Yidong  <cyd@stupidchicken.com>
+
+	* process.c: Revert last change.
+
 2006-08-01  Kim F. Storm  <storm@cua.dk>
 
 	* process.c (wait_reading_process_output_unwind): New function.
